--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,9 @@
 
 /* DEFAULTS */
+body {
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 22px;
+}
 
 h2 {
   font-size: 22px;
