Updated news, career and text. Added images

--- a/styles.css
+++ b/styles.css
@@ -77,20 +77,27 @@ h1 {
 #services ul {
   font-size: 20px;
   font-weight: bold;
-  padding: 30px 20px 20px 20px;
 }
 
 #services ul li {
   /*display: block;*/
 }
 
-
 /*******************************************************************************
 *** BIOMARKERS                                                               ***
 *******************************************************************************/
 
+/*******************************************************************************
+*** INDICES                                                               ***
+*******************************************************************************/
 
+/*******************************************************************************
+*** NEWS                                                               ***
+*******************************************************************************/
 
+/*******************************************************************************
+*** CAREER                                                               ***
+*******************************************************************************/
 
 /*******************************************************************************
 *** ABOUT                                                                    ***
