--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h3 {
 }
 
 h6 {
-  font-size: 14px;
+  font-size: 16px;
   margin: 0 0 10px 0;
   opacity: 0.5;
   text-transform: uppercase;
@@ -30,9 +30,11 @@ ol.refs {
 }
 
 #head,
+#more,
 #services,
 #biomarkers,
 #indices,
+#research,
 #news,
 #career,
 #about,
@@ -40,7 +42,7 @@ ol.refs {
   padding: 70px 0 70px 0;
 }
 
-#head, #contact {
+#head, {
   background: #4485E6;
   color: #FFF;
 }
@@ -52,13 +54,13 @@ ol.refs {
 *******************************************************************************/
 
 #head {
-  background-image: url("img/head.png");
+  background-image: url("img/head2.png");
   background-repeat: no-repeat;
   background-size: auto 100%;
-  background-position: right center;
+  background-position: right;
   color: #FFF;
   padding-top: 90px;
-  padding-bottom:130px;
+  padding-bottom:170px;
 }
 
 h1 {
@@ -70,15 +72,25 @@ h1 {
   float: right;
 }
 
-
+/*******************************************************************************
+*** MORE                                                                  ***
+*******************************************************************************/
 
 /*******************************************************************************
 *** SERVICE                                                                  ***
 *******************************************************************************/
+#services {
+  background: #414A9A;
+    color: #FFF;
+    padding-top: 100px;
+  	padding-bottom:155px;
+}
 
 #services ul {
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 14px;
+  margin: 0 0 10px 0;
+  opacity: 1.0;
+  text-transform: uppercase;
 }
 
 #services ul li {
@@ -94,20 +106,44 @@ h1 {
 *******************************************************************************/
 
 /*******************************************************************************
+*** RESEARCH                                                               ***
+*******************************************************************************/
+.nav3 {
+    height: auto;
+    width: auto;
+    float: center;
+    padding-left: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: #333333;
+    padding-top: 40px;
+    padding-right: 40px;
+}
+
+.icons{
+    display:inline-block;
+    width: 64px; 
+    height: 64px; 
+   }
+
+ a.icons:hover {
+     background: #C93;
+ }
+ 
+/*******************************************************************************
 *** NEWS                                                               ***
 *******************************************************************************/
 
 /*******************************************************************************
 *** CAREER                                                               ***
 *******************************************************************************/
-
+#career {
+  background: #414A9A;
+    color: #FFF;
+}
 /*******************************************************************************
 *** ABOUT                                                                    ***
 *******************************************************************************/
-
-#about {
-  background: #E9E9E9;
-}
 
 #about h2 {
   font-style: italic;
@@ -151,6 +187,10 @@ h1 {
 /*******************************************************************************
 *** CONTACT                                                                  ***
 *******************************************************************************/
+#contact {
+  background: #414A9A;
+    color: #FFF;
+}
 
 #contact h6 {
   opacity: 0.7;
